Agregar funcionalidad de refrescar token y modificacion de handler de usuario y main

--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-PORT=9000
+# PORT=9000
 JWT_SECRET=clave_secreta
 # URL para local
 DB_URL="host=localhost user=userTest password=task123456 dbname=go-task_manager port=5432 sslmode=disable"
